updates to about and item pages

--- a/pages/about.html
+++ b/pages/about.html
@@ -10,6 +10,8 @@ permalink: /about.html
             <h2>About the {{ site.title }}</h2>
 
             <p>The Historical Japanese Ceramic Comparative Collection (HJCCC) contains digital photographs and resources for identifying and describing Japanese ceramics manufactured during the Meiji, Taisho, and early Showa eras (roughly the mid-nineteenth and early twentieth centuries). This collection provides researchers with comparative examples of Japanese ceramics that are found on North American archaeological sites. The HJCCC is intended to assist in identification of historical Japanese ceramics, to encourage the use of standardized terminology, and to promote further research.</p>
+                      
+            <p>The collection was created by University of Idaho Historical Archaeology Ph.D. Candidate Renae Capmbell as part of her 2018 <a href="https://cdil.lib.uidaho.edu">CDIL</a> Digital Scholarship Fellowship. She received assistance with coding, processing, and design from Evan Williamson, Jessica Wilson-Saia, Kevin Dobbins, and Devin Becker.</p>
 
             <h3>Background</h3>
 
@@ -30,7 +32,7 @@ permalink: /about.html
             <p>The ceramics in this collection are classified according to Japanese nomenclature. By incorporating Japanese terms, HJCCC terminology attempts to match the way that the Japanese ceramics industry describes their products and the way that Issei communities would have understood the vessels that are featured in this collection. The HJCCC classification system was developed in collaboration with Japanese ceramics expert Leland Bibb (Campbell 2017a, 2017b) and continues to grow with the input and assistance of other researchers. An abbreviated typology for ceramic forms can be seen on the <a href="{{ '/forms.html' | relative_url }}">Forms page</a>, and full definitions of Japanese terms can be found in the HJCCC <a href="{{ '/glossary/' | relative_url }}">Glossary</a>.</p>
 
             <p>Questions, suggestions, and comments are welcome at rjcampbell@uidaho.edu.</p>
-
+            
             <h3>Acknowledgements</h3>
 
             <p>This research was supported in part by the University of Idaho’s John Calhoun Smith Memorial Fund and a Summer Research Fellowship at the <a href="https://cdil.lib.uidaho.edu/" target="_blank">Center for Digital Inquiry and Learning</a>. Research was facilitated through the <a href="http://www.burkemuseum.org/" target="_blank">Burke Museum of Natural History and Culture</a> at the University of Washington, the US Air Force, the <a href="http://webpages.uidaho.edu/aacc/" target="_blank">Asian American Comparative Collection</a> at the University of Idaho, and the University of Idaho Library’s <a href="https://www.lib.uidaho.edu/digital/about.html" target="_blank">Digital Initiatives</a>.</p>
